@@ -1,0 +1,21 @@
+#!/bin/sh
+#
+# $NetBSD: devpubd-run-hooks.in,v 1.1 2011/08/29 11:38:48 mrg Exp $
+#
+# devpubd run hooks
+
+devpubd_event=$1
+devpubd_device=$2
+devpubd_hooks_base=@HOOKSDIR@
+
+case $devpubd_event in
+device-attach|device-detach)
+	for hook in ${devpubd_hooks_base}/*; do
+		if [ -x "${hook}" ]; then
+			"${hook}" ${devpubd_event} ${devpubd_device}
+		fi
+	done
+	;;
+*)
+	;;
+esac
